[project]
name = "v1vibe"
version = "0.1.0"
description = "Vision One security validation MCP server for AI coding assistants"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Arcanius Development" },
]
keywords = ["mcp", "security", "trend-micro", "vision-one", "malware", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.20.0",
    "httpx>=0.27.0",
    "visionone-filesecurity>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/arcaniusdev/v1vibe"
Repository = "https://github.com/arcaniusdev/v1vibe"
Issues = "https://github.com/arcaniusdev/v1vibe/issues"

[project.scripts]
v1vibe = "v1vibe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v1vibe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=v1vibe",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=10",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]
